# foundryup

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  foundryup-init.sh  typos.toml
.config/: nextest.toml
.github/ISSUE_TEMPLATE/: BUG-FORM.yml  FEATURE-FORM.yml  config.yml
.github/workflows/: ci.yml  release.yml  tests.yaml
src/: cli.rs  config.rs  download.rs  install.rs  main.rs  platform.rs  process.rs  self_update.rs  utils.rs
src/cli/: foundryup.rs
src/cli/self_update/: mod.rs  shell.rs  windows.rs
tests/it/: installer_script.rs  main.rs  self_update.rs
