[package]
name = "foundryup"
version = "2.0.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/foundry-rs/foundryup"
description = "Manage foundry toolchain installations with ease"

[lints.rust]
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "deny", priority = -1 }
unreachable_pub = "warn"
unused_must_use = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }

[build-dependencies]
vergen-git2 = { version = "1", features = ["build", "rustc"] }

[dependencies]
# async
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "gzip",
    "stream",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "io-util"] }
futures-util = "0.3"

# cli
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4"

# error handling
eyre = "0.6"

# misc
fs-err = "3"
semver = "1"
home = "0.5"
sha2 = "0.10"
hex = "0.4"
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
serde_json = "1"
base64 = "0.22"
indicatif = "0.17"
sysinfo = "0.33"

# tracing
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
color-eyre = "0.6.5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation"] }

[dependencies.tempfile]
version = "3"

[dev-dependencies]
snapbox = "0.6"
