[package]
name = "foundryup"
version = "2.0.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/foundry-rs/foundryup"
description = "Manage foundry toolchain installations with ease"

[lints.rust]
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "deny", priority = -1 }
unreachable_pub = "warn"
unused_must_use = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
opt-level = "s"
lto = "thin"
debug = "none"
strip = "debuginfo"
panic = "abort"
codegen-units = 16

[build-dependencies]
vergen-gitcl = { version = "1", features = ["build", "rustc"] }

[dependencies]
# async
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "gzip",
    "stream",
] }
tokio = { version = "1", features = ["rt-multi-thread", "fs", "process", "io-util"] }
futures-util = "0.3"

# cli
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4"

# error handling
eyre = "0.6"

# misc
base64 = "0.22"
flate2 = "1"
fs-err = "3"
hex = "0.4"
home = "0.5"
indicatif = "0.18"
semver = "1"
serde_json = "1"
sha2 = "0.10"
sysinfo = "0.36"
tar = "0.4"
tempfile = "3"
self-replace = "1"
which = "8"
zip = { version = "6", default-features = false, features = ["deflate"] }

# tracing
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
color-eyre = "0.6.5"

[dev-dependencies]
snapbox = "0.6"
